SSCS-11092 starting updates and tidies AdjournCaseAboutToStartHandlerTest