@@ -1,28 +1,32 @@
 package uk.gov.hmcts.reform.sscs.ccd.presubmit.adjourncase;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.when;
 import static org.mockito.MockitoAnnotations.openMocks;
 import static uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType.ABOUT_TO_START;
 import static uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.sscs.ccd.callback.DocumentType.ADJOURNMENT_NOTICE;
 import static uk.gov.hmcts.reform.sscs.ccd.callback.DocumentType.DRAFT_ADJOURNMENT_NOTICE;
+import static uk.gov.hmcts.reform.sscs.ccd.domain.YesNo.NO;
+import static uk.gov.hmcts.reform.sscs.ccd.domain.YesNo.YES;
 
+import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import junitparams.JUnitParamsRunner;
-import junitparams.Parameters;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.sscs.ccd.callback.Callback;
 import uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType;
 import uk.gov.hmcts.reform.sscs.ccd.domain.*;
 
-@RunWith(JUnitParamsRunner.class)
-public class AdjournCaseAboutToStartHandlerTest {
+@ExtendWith(MockitoExtension.class)
+class AdjournCaseAboutToStartHandlerTest {
 
     private static final String USER_AUTHORISATION = "Bearer token";
     private AdjournCaseAboutToStartHandler handler;
@@ -35,52 +39,54 @@ public class AdjournCaseAboutToStartHandlerTest {
 
     private SscsCaseData sscsCaseData;
 
-    @Before
+    @BeforeEach
     public void setUp() {
-        openMocks(this);
         handler = new AdjournCaseAboutToStartHandler();
 
         when(callback.getEvent()).thenReturn(EventType.ADJOURN_CASE);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         sscsCaseData = SscsCaseData.builder().ccdCaseId("ccdId")
                 .appeal(Appeal.builder().build())
-                .adjournCaseGenerateNotice("")
-                .adjournCaseTypeOfHearing("")
-                .adjournCaseCanCaseBeListedRightAway("")
-                .adjournCaseAreDirectionsBeingMadeToParties("")
-                .adjournCaseDirectionsDueDateDaysOffset("")
-                .adjournCaseDirectionsDueDate("")
-                .adjournCaseTypeOfNextHearing("")
-                .adjournCaseNextHearingVenue("")
-                .adjournCaseNextHearingVenueSelected(new DynamicList(new DynamicListItem("", ""), new ArrayList<>()))
-                .adjournCasePanelMembersExcluded("")
-                .adjournCaseDisabilityQualifiedPanelMemberName("")
-                .adjournCaseMedicallyQualifiedPanelMemberName("")
-                .adjournCaseOtherPanelMemberName("")
-                .adjournCaseNextHearingListingDurationType("")
-                .adjournCaseNextHearingListingDuration("")
-                .adjournCaseNextHearingListingDurationUnits("")
-                .adjournCaseInterpreterRequired("")
-                .adjournCaseInterpreterLanguage("")
-                .adjournCaseNextHearingDateType("")
-                .adjournCaseNextHearingDateOrPeriod("")
-                .adjournCaseNextHearingDateOrTime("")
-                .adjournCaseNextHearingFirstAvailableDateAfterDate("")
-                .adjournCaseNextHearingFirstAvailableDateAfterPeriod("")
-                .adjournCaseReasons(Arrays.asList(new CollectionItem(null, "")))
-                .adjournCaseAdditionalDirections(Arrays.asList(new CollectionItem(null, "")))
-                .build();
+            .adjournment(Adjournment.builder()
+                .generateNotice(YES)
+                .typeOfHearing(AdjournCaseTypeOfHearing.VIDEO)
+                .canCaseBeListedRightAway(YES)
+                .areDirectionsBeingMadeToParties(NO)
+                .directionsDueDateDaysOffset(AdjournCaseDaysOffset.FOURTEEN_DAYS)
+                .directionsDueDate(LocalDate.now().plusMonths(1))
+                .typeOfNextHearing(AdjournCaseTypeOfHearing.FACE_TO_FACE)
+                .nextHearingVenue(AdjournCaseNextHearingVenue.SOMEWHERE_ELSE)
+                .nextHearingVenueSelected(new DynamicList(new DynamicListItem("",""), List.of(new DynamicListItem("", ""))))
+                .panelMembersExcluded(AdjournCasePanelMembersExcluded.NO)
+                .disabilityQualifiedPanelMemberName("")
+                .medicallyQualifiedPanelMemberName("")
+                .otherPanelMemberName("")
+                .nextHearingListingDurationType(AdjournCaseNextHearingDurationType.STANDARD)
+                .nextHearingListingDuration(1)
+                .nextHearingListingDurationUnits(AdjournCaseNextHearingDurationUnits.SESSIONS)
+                .interpreterRequired(NO)
+                .interpreterLanguage(new DynamicList(new DynamicListItem("spanish", "Spanish"), List.of()))
+                .nextHearingDateType(AdjournCaseNextHearingDateType.FIRST_AVAILABLE_DATE_AFTER)
+                .nextHearingDateOrPeriod(AdjournCaseNextHearingDateOrPeriod.PROVIDE_PERIOD)
+                .nextHearingDateOrTime("")
+                .nextHearingFirstAvailableDateAfterDate(LocalDate.now())
+                .nextHearingFirstAvailableDateAfterPeriod(AdjournCaseNextHearingPeriod.NINETY_DAYS)
+                .reasons(List.of(new CollectionItem<>(null, "")))
+                .additionalDirections(List.of(new CollectionItem<>(null, "")))
+                .isAdjournmentInProgress(YES)
+                .build())
+            .build();
         when(caseDetails.getCaseData()).thenReturn(sscsCaseData);
     }
 
     @Test
-    public void givenANonAdjournCaseEvent_thenReturnFalse() {
+    void givenANonAdjournCaseEvent_thenReturnFalse() {
         when(callback.getEvent()).thenReturn(EventType.APPEAL_RECEIVED);
-        assertFalse(handler.canHandle(ABOUT_TO_SUBMIT, callback));
+        assertThat(handler.canHandle(ABOUT_TO_SUBMIT, callback)).isFalse();
     }
 
     @Test
-    public void givenCaseHasAdjournedFieldsPopulatedAndNoDraftAdjournedDocs_thenClearTransientFields() {
+    void givenCaseHasAdjournedFieldsPopulatedAndNoDraftAdjournedDocs_thenClearTransientFields() {
 
         List<SscsDocument> documentList = new ArrayList<>();
 
@@ -91,35 +97,35 @@ public class AdjournCaseAboutToStartHandlerTest {
 
         handler.handle(ABOUT_TO_START, callback, USER_AUTHORISATION);
 
-        assertNull(sscsCaseData.getAdjournCaseGenerateNotice());
-        assertNull(sscsCaseData.getAdjournCaseTypeOfHearing());
-        assertNull(sscsCaseData.getAdjournCaseCanCaseBeListedRightAway());
-        assertNull(sscsCaseData.getAdjournCaseAreDirectionsBeingMadeToParties());
-        assertNull(sscsCaseData.getAdjournCaseDirectionsDueDateDaysOffset());
-        assertNull(sscsCaseData.getAdjournCaseDirectionsDueDate());
-        assertNull(sscsCaseData.getAdjournCaseTypeOfNextHearing());
-        assertNull(sscsCaseData.getAdjournCaseNextHearingVenue());
-        assertNull(sscsCaseData.getAdjournCaseNextHearingVenueSelected());
-        assertNull(sscsCaseData.getAdjournCasePanelMembersExcluded());
-        assertNull(sscsCaseData.getAdjournCaseDisabilityQualifiedPanelMemberName());
-        assertNull(sscsCaseData.getAdjournCaseMedicallyQualifiedPanelMemberName());
-        assertNull(sscsCaseData.getAdjournCaseOtherPanelMemberName());
-        assertNull(sscsCaseData.getAdjournCaseNextHearingListingDurationType());
-        assertNull(sscsCaseData.getAdjournCaseNextHearingListingDuration());
-        assertNull(sscsCaseData.getAdjournCaseNextHearingListingDurationUnits());
-        assertNull(sscsCaseData.getAdjournCaseInterpreterRequired());
-        assertNull(sscsCaseData.getAdjournCaseInterpreterLanguage());
-        assertNull(sscsCaseData.getAdjournCaseNextHearingDateType());
-        assertNull(sscsCaseData.getAdjournCaseNextHearingDateOrPeriod());
-        assertNull(sscsCaseData.getAdjournCaseNextHearingDateOrTime());
-        assertNull(sscsCaseData.getAdjournCaseNextHearingFirstAvailableDateAfterDate());
-        assertNull(sscsCaseData.getAdjournCaseNextHearingFirstAvailableDateAfterPeriod());
-        assertNull(sscsCaseData.getAdjournCaseReasons());
-        assertNull(sscsCaseData.getAdjournCaseAdditionalDirections());
+        assertThat(sscsCaseData.getAdjournment().getGenerateNotice()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getTypeOfHearing()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getCanCaseBeListedRightAway()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getAreDirectionsBeingMadeToParties()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getDirectionsDueDateDaysOffset()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getDirectionsDueDate()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getTypeOfNextHearing()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getNextHearingVenue()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getNextHearingVenueSelected()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getPanelMembersExcluded()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getDisabilityQualifiedPanelMemberName()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getMedicallyQualifiedPanelMemberName()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getOtherPanelMemberName()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getNextHearingListingDurationType()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getNextHearingListingDuration()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getNextHearingListingDurationUnits()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getInterpreterRequired()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getInterpreterLanguage()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getNextHearingDateType()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getNextHearingDateOrPeriod()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getNextHearingDateOrTime()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getNextHearingFirstAvailableDateAfterDate()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getNextHearingFirstAvailableDateAfterPeriod()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getReasons()).isNull();
+        assertThat(sscsCaseData.getAdjournment().getAdditionalDirections()).isNull();
     }
 
     @Test
-    public void givenCaseHasAdjournedFieldsPopulatedAndDraftAdjournedDocs_thenDoNotClearTransientFields() {
+    void givenCaseHasAdjournedFieldsPopulatedAndDraftAdjournedDocs_thenDoNotClearTransientFields() {
 
         List<SscsDocument> documentList = new ArrayList<>();
 
@@ -130,42 +136,46 @@ public class AdjournCaseAboutToStartHandlerTest {
 
         handler.handle(ABOUT_TO_START, callback, USER_AUTHORISATION);
 
-        assertEquals("", sscsCaseData.getAdjournCaseGenerateNotice());
-        assertEquals("", sscsCaseData.getAdjournCaseTypeOfHearing());
-        assertEquals("", sscsCaseData.getAdjournCaseCanCaseBeListedRightAway());
-        assertEquals("", sscsCaseData.getAdjournCaseAreDirectionsBeingMadeToParties());
-        assertEquals("", sscsCaseData.getAdjournCaseDirectionsDueDateDaysOffset());
-        assertEquals("", sscsCaseData.getAdjournCaseDirectionsDueDate());
-        assertEquals("", sscsCaseData.getAdjournCaseTypeOfNextHearing());
-        assertEquals("", sscsCaseData.getAdjournCaseNextHearingVenue());
-        assertEquals("", sscsCaseData.getAdjournCaseNextHearingVenueSelected().getValue().getCode());
-        assertEquals("", sscsCaseData.getAdjournCasePanelMembersExcluded());
-        assertEquals("", sscsCaseData.getAdjournCaseDisabilityQualifiedPanelMemberName());
-        assertEquals("", sscsCaseData.getAdjournCaseMedicallyQualifiedPanelMemberName());
-        assertEquals("", sscsCaseData.getAdjournCaseOtherPanelMemberName());
-        assertEquals("", sscsCaseData.getAdjournCaseNextHearingListingDurationType());
-        assertEquals("", sscsCaseData.getAdjournCaseNextHearingListingDuration());
-        assertEquals("", sscsCaseData.getAdjournCaseNextHearingListingDurationUnits());
-        assertEquals("", sscsCaseData.getAdjournCaseInterpreterRequired());
-        assertEquals("", sscsCaseData.getAdjournCaseInterpreterLanguage());
-        assertEquals("", sscsCaseData.getAdjournCaseNextHearingDateType());
-        assertEquals("", sscsCaseData.getAdjournCaseNextHearingDateOrPeriod());
-        assertEquals("", sscsCaseData.getAdjournCaseNextHearingDateOrTime());
-        assertEquals("", sscsCaseData.getAdjournCaseNextHearingFirstAvailableDateAfterDate());
-        assertEquals("", sscsCaseData.getAdjournCaseNextHearingFirstAvailableDateAfterPeriod());
-        assertEquals(Arrays.asList(new CollectionItem(null, "")), sscsCaseData.getAdjournCaseReasons());
-        assertEquals("", Arrays.asList(new CollectionItem(null, "")), sscsCaseData.getAdjournCaseAdditionalDirections());
+        Adjournment adjournment = sscsCaseData.getAdjournment();
+        assertThat(adjournment.getGenerateNotice()).isEqualTo(YES);
+        assertThat(adjournment.getTypeOfHearing()).isEqualTo(AdjournCaseTypeOfHearing.VIDEO);
+        assertThat(adjournment.getCanCaseBeListedRightAway()).isEqualTo(YES);
+        assertThat(adjournment.getAreDirectionsBeingMadeToParties()).isEqualTo(NO);
+        assertThat(adjournment.getDirectionsDueDateDaysOffset()).isEqualTo(AdjournCaseDaysOffset.FOURTEEN_DAYS);
+        assertThat(adjournment.getDirectionsDueDate()).isEqualTo(LocalDate.now().plusMonths(1));
+        assertThat(adjournment.getTypeOfNextHearing()).isEqualTo(AdjournCaseTypeOfHearing.FACE_TO_FACE);
+        assertThat(adjournment.getNextHearingVenue()).isEqualTo(AdjournCaseNextHearingVenue.SOMEWHERE_ELSE);
+        assertThat(adjournment.getNextHearingVenueSelected().getValue().getCode()).isEmpty();
+        assertThat(adjournment.getPanelMembersExcluded()).isEqualTo(AdjournCasePanelMembersExcluded.NO);
+        assertThat(adjournment.getDisabilityQualifiedPanelMemberName()).isEmpty();
+        assertThat(adjournment.getMedicallyQualifiedPanelMemberName()).isEmpty();
+        assertThat(adjournment.getOtherPanelMemberName()).isEmpty();
+        assertThat(adjournment.getNextHearingListingDurationType()).isEqualTo(AdjournCaseNextHearingDurationType.STANDARD);
+        assertThat(adjournment.getNextHearingListingDuration()).isEqualTo(1);
+        assertThat(adjournment.getNextHearingListingDurationUnits()).isEqualTo(AdjournCaseNextHearingDurationUnits.SESSIONS);
+        assertThat(adjournment.getInterpreterRequired()).isEqualTo(NO);
+        assertThat(adjournment.getInterpreterLanguage()).isEqualTo(new DynamicList(new DynamicListItem("spanish", "Spanish"), List.of()));
+        assertThat(adjournment.getNextHearingDateType()).isEqualTo(AdjournCaseNextHearingDateType.FIRST_AVAILABLE_DATE_AFTER);
+        assertThat(adjournment.getNextHearingDateOrPeriod()).isEqualTo(AdjournCaseNextHearingDateOrPeriod.PROVIDE_PERIOD);
+        assertThat(adjournment.getNextHearingDateOrTime()).isEmpty();
+        assertThat(adjournment.getNextHearingFirstAvailableDateAfterDate()).isEqualTo(LocalDate.now());
+        assertThat(adjournment.getNextHearingFirstAvailableDateAfterPeriod()).isEqualTo(AdjournCaseNextHearingPeriod.NINETY_DAYS);
+        assertThat(adjournment.getReasons()).isEqualTo(List.of(new CollectionItem<>(null, "")));
+        assertThat(adjournment.getAdditionalDirections()).isEqualTo(List.of(new CollectionItem<>(null, "")));
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = CallbackType.class, names = {"ABOUT_TO_SUBMIT", "MID_EVENT", "SUBMITTED"})
+    void givenANonCallbackType_thenReturnFalse(CallbackType callbackType) {
+        assertThat(handler.canHandle(callbackType, callback)).isFalse();
     }
 
     @Test
-    @Parameters({"ABOUT_TO_SUBMIT", "MID_EVENT", "SUBMITTED"})
-    public void givenANonCallbackType_thenReturnFalse(CallbackType callbackType) {
-        assertFalse(handler.canHandle(callbackType, callback));
-    }
-
-    @Test(expected = IllegalStateException.class)
-    public void throwsExceptionIfItCannotHandleTheAppeal() {
+    void throwsExceptionIfItCannotHandleTheAppeal() {
         when(callback.getEvent()).thenReturn(EventType.APPEAL_RECEIVED);
-        handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
+
+        assertThatThrownBy(() ->
+            handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION)
+            ).isInstanceOf(IllegalStateException.class);
     }
 }
